--- a/BegoniaAPP/app/src/main/res/layout/activity_main.xml
+++ b/BegoniaAPP/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,20 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/switchRegisterActivity"
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="注册"
+            android:textColor="#2250C5"
+            android:textStyle="italic"></TextView>
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="190dp"
             android:maxHeight="50dp"
             android:maxWidth="50dp"
             android:id="@+id/userImage"
@@ -100,21 +110,13 @@
                 android:textStyle="italic"></TextView>
         </LinearLayout>
         <TextView
-            android:id="@+id/switchRegisterActivity"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册"
-            android:textColor="#2250C5"
-            android:textStyle="italic"></TextView>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_gravity="bottom|end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:layout_marginEnd="@dimen/fab_margin"
-            android:layout_marginBottom="16dp"
-            android:tooltipText="其他"
-            app:srcCompat="@drawable/more" />
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:text="账号密码登录"
+            android:textStyle="italic"
+            android:textColor="#214DBD"
+            android:id="@+id/otherSignUp">
+        </TextView>
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
