--- a/BegoniaAPP/app/src/main/res/layout/activity_other_sing_up.xml
+++ b/BegoniaAPP/app/src/main/res/layout/activity_other_sing_up.xml
@@ -55,7 +55,7 @@
                 <EditText
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/phoneNum"
+                    android:id="@+id/id"
                     android:hint="请输入账号"
                     ></EditText>
             </LinearLayout>
@@ -72,7 +72,7 @@
                     ></TextView>
 
                 <EditText
-                    android:id="@+id/key"
+                    android:id="@+id/password"
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:hint="请输入密码"
@@ -80,7 +80,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/sign"
+                android:id="@+id/login"
                 android:layout_width="250dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
