--- a/BegoniaAPP/app/src/main/res/layout/activity_register.xml
+++ b/BegoniaAPP/app/src/main/res/layout/activity_register.xml
@@ -72,7 +72,7 @@
                 ></TextView>
 
             <EditText
-                android:id="@+id/key"
+                android:id="@+id/password_edit"
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:hint="请输入密码"
@@ -80,7 +80,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/reKey"
+            android:id="@+id/password_edit1"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
